[package]
name = "pmemlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vstd = "0.0.0-2026-05-06-1803"
crc64fast = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(verus_keep_ghost)"] }

[package.metadata.verus]
verify = true
